# nbabench-data

./: README.md  pyproject.toml
data/2024/: postseason.jsonl  season.jsonl
data/2025/: postseason.jsonl  season.jsonl
environments/nbabench_exa/: README.md  nbabench_exa.py  pyproject.toml
