[project]
name = "nbabench-exa"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5.post0",
    "openai>=1.109.1",
    "datasets>=4.2.0",
    "exa-py>=1.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
